--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,6 +50,13 @@ jobs:
           username: oauth2accesstoken
           password: ${{ steps.gcp-auth.outputs.access_token }}
 
+      - name: Login to Google Artifact Registry
+        uses: docker/login-action@v3
+        with:
+          registry: europe-west4-docker.pkg.dev
+          username: oauth2accesstoken
+          password: ${{ steps.gcp-auth.outputs.access_token }}
+
       - uses: nrwl/nx-set-shas@v3
 
       - uses: actions/setup-node@v3
@@ -115,10 +122,20 @@ jobs:
           sh ./tools/build-sdk-docs.sh
           gsutil -m rsync -r ./libs/sdk-core/docs gs://$DOCS_STORAGE/js-sdk
 
-      - name: Build dashboard image
+      - name: Build dashboard image for GCR
         if: steps.check-deploy.outputs.deploy-app == 'yes'
         env:
           CONTAINER_REGISTRY: eu.gcr.io/stashify-218417
+        run: |-
+          docker build -t $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA} -f docker/Dockerfile  --build-arg appId=app --build-arg appFolder=dashboard .
+          docker tag $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA} $CONTAINER_REGISTRY/$APP_IMAGE_NAME:main
+          docker push $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA}
+          docker push $CONTAINER_REGISTRY/$APP_IMAGE_NAME:main
+
+      - name: Build dashboard image for GCR
+        if: steps.check-deploy.outputs.deploy-app == 'yes'
+        env:
+          CONTAINER_REGISTRY: europe-west4-docker.pkg.dev/nuclia-internal/private
         run: |-
           docker build -t $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA} -f docker/Dockerfile  --build-arg appId=app --build-arg appFolder=dashboard .
           docker tag $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA} $CONTAINER_REGISTRY/$APP_IMAGE_NAME:main
@@ -135,10 +152,20 @@ jobs:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
 
-      - name: Build manager image
+      - name: Build manager image for GCR
         if: steps.check-deploy.outputs.deploy-manager == 'yes'
         env:
           CONTAINER_REGISTRY: eu.gcr.io/stashify-218417
+        run: |-
+          docker build -t $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA} -f docker/Dockerfile  --build-arg appId=manager --build-arg appFolder=manager-v2 .
+          docker tag $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA} $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:main
+          docker push $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA}
+          docker push $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:main
+
+      - name: Build manager image for Artifact Repository
+        if: steps.check-deploy.outputs.deploy-manager == 'yes'
+        env:
+          CONTAINER_REGISTRY: europe-west4-docker.pkg.dev/nuclia-internal/private
         run: |-
           docker build -t $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA} -f docker/Dockerfile  --build-arg appId=manager --build-arg appFolder=manager-v2 .
           docker tag $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA} $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:main
