--- a/apps/nucliadb-admin/src/environments_config/production/app-config.json
+++ b/apps/nucliadb-admin/src/environments_config/production/app-config.json
@@ -4,6 +4,7 @@
   "backend": {
     "app": "nucliadb-admin",
     "apiPath": "/api",
+    "oauth": "https://nuclia.cloud",
     "siteKey": "",
     "sentry_environment": "prod",
     "sentry_url": "https://76bfd6392db6450a8f3174877b9bac9d@o393980.ingest.sentry.io/5425081",
