stop pushing docker images to GCR

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,13 +43,6 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
 
-      - name: Login to Google GCR
-        uses: docker/login-action@v3
-        with:
-          registry: eu.gcr.io
-          username: oauth2accesstoken
-          password: ${{ steps.gcp-auth.outputs.access_token }}
-
       - name: Login to Google Artifact Registry
         uses: docker/login-action@v3
         with:
@@ -122,17 +115,7 @@ jobs:
           sh ./tools/build-sdk-docs.sh
           gsutil -m rsync -r ./libs/sdk-core/docs gs://$DOCS_STORAGE/js-sdk
 
-      - name: Build dashboard image for GCR
-        if: steps.check-deploy.outputs.deploy-app == 'yes'
-        env:
-          CONTAINER_REGISTRY: eu.gcr.io/stashify-218417
-        run: |-
-          docker build -t $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA} -f docker/Dockerfile  --build-arg appId=app --build-arg appFolder=dashboard .
-          docker tag $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA} $CONTAINER_REGISTRY/$APP_IMAGE_NAME:main
-          docker push $CONTAINER_REGISTRY/$APP_IMAGE_NAME:${SHORT_SHA}
-          docker push $CONTAINER_REGISTRY/$APP_IMAGE_NAME:main
-
-      - name: Build dashboard image for GCR
+      - name: Build dashboard image for Artifact Repository
         if: steps.check-deploy.outputs.deploy-app == 'yes'
         env:
           CONTAINER_REGISTRY: europe-west4-docker.pkg.dev/nuclia-internal/private
@@ -151,16 +134,6 @@ jobs:
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_TOKEN }}
-
-      - name: Build manager image for GCR
-        if: steps.check-deploy.outputs.deploy-manager == 'yes'
-        env:
-          CONTAINER_REGISTRY: eu.gcr.io/stashify-218417
-        run: |-
-          docker build -t $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA} -f docker/Dockerfile  --build-arg appId=manager --build-arg appFolder=manager-v2 .
-          docker tag $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA} $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:main
-          docker push $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:${SHORT_SHA}
-          docker push $CONTAINER_REGISTRY/$MANAGER_IMAGE_NAME:main
 
       - name: Build manager image for Artifact Repository
         if: steps.check-deploy.outputs.deploy-manager == 'yes'
